Fixed double border on hover when another item was active

--- a/frontend/theme/extras/custom.less
+++ b/frontend/theme/extras/custom.less
@@ -63,8 +63,10 @@ body {
     padding: auto;
     color: @black;
     text-transform: none;
+    padding-bottom: 21px;
     &:hover {
       border-color: @black;
+      padding-bottom: 21px;
     }
   }
 
@@ -80,7 +82,7 @@ body {
         width: 100%;
         left: 0;
         background-color: @white;
-        border-top: 1px solid @light-grey;
+        //border-top: 1px solid @light-grey;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         padding-top: 14px;
         .sub-menu {
@@ -95,7 +97,7 @@ body {
             a {
               color: #595959;
               &:hover {
-                color: #007eb6;
+                color: @black;
               }
             }
           }
